# schoolWorks

./: README.md
EXAMPLE/: README.md
programming_language/HW(108)/Homework1/: CMakeLists.txt  main.cpp
programming_language/HW(108)/Homework1/ext/nana/include/nana/: basic_types.hpp  c++defines.hpp  charset.hpp  deploy.hpp  optional.hpp  stdc++.hpp  unicode_bidi.hpp  verbose_preprocessor.hpp
programming_language/HW(108)/Homework1/ext/nana/source/: basic_types.cpp  deploy.cpp  internationalization.cpp  stdc++.cpp
programming_language/HW(108)/Homework1/ext/nana/source/detail/: platform_abstraction.cpp  platform_abstraction.hpp  platform_spec_posix.cpp  platform_spec_selector.hpp  platform_spec_windows.cpp
programming_language/HW(108)/Homework1/ext/nana/source/filesystem/: filesystem.cpp
programming_language/HW(108)/Homework1/ext/nana/source/gui/: animation.cpp  dragger.cpp  drawing.cpp  element.cpp  filebox.cpp  msgbox.cpp  notifier.cpp  place.cpp  programming_interface.cpp  timer.cpp  tooltip.cpp
programming_language/HW(108)/Homework1/ext/nana/source/paint/: graphics.cpp  pixel_buffer.cpp  text_renderer.cpp  truetype.hpp
programming_language/HW(108)/Homework1/mingw_build/: CMakeCache.txt
programming_language/HW(108)/Homework1/msvc_build/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj.filters  NANATest.sln  ZERO_CHECK.vcxproj  cmake_install.cmake
programming_language/HW(108)/Homework1/msvc_build/ext/nana/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  nana.sln
(+1413 files in other folders)
